[package]
name = "drgdfu"
version = "0.1.0"
authors = ["Ulf Lilleengen <lulf@redhat.com>"]
edition = "2021"
description = "A DFU update tool for Drogue Device's with DFU capabilities"

[dependencies]

uuid = { version = "0.8", features = ["v4"] }
clap = { version = "3.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
bluer = "0.13"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
log = "0.4.11"
chrono = "0.4"
bytes = "1.1"
serde_json = "1"
serde_cbor = "0.11"

serde = { version = "1", features = ["derive"] }
stderrlog = "0.4"
futures = "0.3"
anyhow = "1.0"
humantime = "2"
tokio-serial = "5.4.1"
postcard = "0.7"
#drogue-ajour-protocol = { path = "../drogue-ajour/protocol", features = ["std"] }
drogue-ajour-protocol = { git = "https://github.com/lulf/drogue-ajour.git", branch = "main", features = ["std"] }
