[package]
name = "drgdfu"
version = "0.1.0"
authors = ["Ulf Lilleengen <lulf@redhat.com>"]
edition = "2021"
license = "Apache-2.0"
description = "A DFU update tool for Drogue Device's with DFU capabilities"
repository = "https://github.com/drogue-iot/drgdfu"
homepage = "https://drogue.io"
keywords = ["IoT", "DFU", "Firmware", "BLE", "OTA"]
readme = "README.md"

[lib]
name = "drgdfu"
path = "src/lib.rs"

[[bin]]
name = "drgdfu"
path = "src/main.rs"

[dependencies]

uuid = { version = "0.8", features = ["v4"] }
clap = { version = "3", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
log = "0.4.11"
chrono = "0.4"
bytes = "1.1"
serde_json = "1"
serde_cbor = "0.11"
bluer = { version = "0.13", optional = true }

serde = { version = "1", features = ["derive"] }
stderrlog = "0.4"
futures = "0.3"
anyhow = "1.0"
humantime = "2"
tokio-serial = "5.4.1"
postcard = "0.7"
drogue-ajour-protocol = { git = "https://github.com/drogue-iot/drogue-ajour.git", branch = "main", features = ["std"] }

[features]
default = ["bluez"]
bluez = [ "bluer" ]
