[package]
name = "drgdfu"
version = "0.4.0"
authors = ["Ulf Lilleengen <lulf@redhat.com>"]
edition = "2021"
license = "Apache-2.0"
description = "A DFU update tool and library for devices with DFU capabilities"
repository = "https://github.com/drogue-iot/drgdfu"
homepage = "https://drogue.io"
keywords = ["IoT", "DFU", "Firmware", "BLE", "OTA"]
readme = "README.md"

[lib]
name = "drgdfu"
path = "src/lib.rs"

[[bin]]
name = "drgdfu"
path = "src/main.rs"

[dependencies]

uuid = { version = "0.8", features = ["v4"] }
clap = { version = "3", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
log = "0.4.11"
chrono = "0.4"
bytes = "1.1"
serde_json = "1"
serde_cbor = "0.11"
btleplug = { version = "0.9", features = ["serde"], optional = true }

serde = { version = "1", features = ["derive"] }
stderrlog = "0.4"
futures = "0.3"
anyhow = "1.0"
humantime = "2"
tokio-serial = "5.4.1"
heapless = "0.7"
embedded-update = { version = "0.4.0", features = ["nightly", "std"] }
embedded-io = {version = "0.3.0", features = ["tokio"] }
embedded-hal-async = { version = "0.1.0-alpha.1" }

[features]
default = ["ble"]
ble = [ "btleplug" ]
